<resources>
    <string name="app_name">Project Week 5</string>
    <string name="main_page">Calculator &amp; Dice</string>


    <string name="initval">0</string>
    <string name="img_icon">IMG Icon</string>
    <string name="calculator">Calculator</string>
    <string name="dice">Dice</string>

    <string name="ac">C</string>
    <string name="pm">+/-</string>
    <string name="percent">%</string>
    <string name="delete">DEL</string>

    <string name="dive">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="multiple">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="substraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>

    <string name="roll">Roll</string>
    <string name="roll_button_text">Lets Roll</string>

</resources>